...
    override class func canonicalRequest(for request: URLRequest) -> URLRequest {
        // Required to be implemented here. Just return what is passed
      return request
    }
    
    override func startLoading() {
        if let dataString = ProcessInfo.processInfo.environment["MockResponse"] {
            
            if let response = HTTPURLResponse(url: MostPopularArticlesNetworkService.url(period: .day), statusCode: 200, httpVersion: nil, headerFields: ["Content-Type": "application/json"]) {
            client?.urlProtocol(self, didReceive: response, cacheStoragePolicy: .notAllowed)
        }
        
        client?.urlProtocol(self, didLoad: Data(dataString.utf8))
...
