...
        viewModel.viewDidLoad()
    }
    
    func configureUI() {
        tableView.register(UINib(nibName: cellNibName, bundle: Bundle.init(for: NYTimesMostViewedArticleCell.self)), forCellReuseIdentifier: cellNibName)
        tableView.isAccessibilityElement = true
        tableView.accessibilityIdentifier = "ViewedArticleTableView"
        tableView.tableFooterView = UIView(frame: .zero)
        activityIndicator.hidesWhenStopped = true
        activityIndicator.style = .large
    }
    
    func showAlert(message: String) {
...
